[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-llm = "1.1.0"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
serde_json = '1.0.9'
serde_derive = '1.0.9'
serde = { version = "1.0.9", features = ["derive"] }
