[package]
name = "post-likes-rust-backend"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
ic-agent = "0.44"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
dotenv = "0.15"
tower = "0.5"
